# pystart

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/holocron/: __init__.py  core.py  settings.py
tests/: test_core.py
