[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holocron"
version = "0.1.0"
description = "A Jedi's guide to Python excellence — implementing the Python Golden Path."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bandit>=1.7",
  "pydantic-settings>=2.0",
  "pre-commit>=3.6",
  "pytest>=8.0",
  "pyright>=1.1.350",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
holocron = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]
